--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "commit": "git-cz",
     "build": "npx tsc && npx tsc-alias -p tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "node -r ts-node/register src/index.ts",
+    "dev": "nodemon  src/index.ts",
     "lint": "eslint . --ext .ts",
     "test": "npx tsc && jest --silent=false"
   },
@@ -61,6 +61,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.2",
     "qrcode": "^1.5.3",
