--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 NODE_ENV=development
 PORT=8000
 
-DB_NAME=projeto
-DB_HOST=fiap-soat-project_db
-DB_USERNAME=root
-DB_PASSWORD=testtest
+DB_HOST=localhost
+DB_NAME=PedidoDB
+DB_PORT=37017
