--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     }
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.485.0",
     "aws-jwt-verify": "^4.0.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
