--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DB_NAME=PedidoDB
 DB_PORT=37017
 
 PRODUTO_MS_URL=""
+FILA_ENVIO_PAGAMENTO="pagamento-queue"
+FILA_PAGAMENTO_URL="pedido-pago"
+FILA_PAGAMENTO_DLQ_URL="pedido-pago-dlq"
