--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon  src/index.ts",
     "lint": "eslint . --ext .ts",
-    "test": "npx tsc && jest --silent=false"
+    "test": "npx tsc && jest --coverage --silent=false --detectOpenHandles"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
@@ -58,6 +58,7 @@
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.485.0",
     "aws-jwt-verify": "^4.0.0",
+    "aws-sdk-mock": "^5.8.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
