--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "commit": "git-cz",
     "build": "npx tsc && npx tsc-alias -p tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "nodemon  src/index.ts",
+    "dev": "nodemon --watch src src/index.ts",
     "lint": "eslint . --ext .ts",
-    "test": "npx tsc && jest --coverage --silent=false --detectOpenHandles"
+    "test": "npx tsc && jest --coverage --silent=false --detectOpenHandles",
+    "test:bdd": "cucumber-js"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
+    "@cucumber/cucumber": "^10.2.1",
     "@jest/globals": "^29.7.0",
+    "@types/cucumber": "^7.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.4",
@@ -45,10 +48,10 @@
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.7",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.3.3"
   },
   "config": {
     "commitizen": {
@@ -58,7 +61,6 @@
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.485.0",
     "aws-jwt-verify": "^4.0.0",
-    "aws-sdk-mock": "^5.8.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
