--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "es2016",
     "module": "commonjs",
     "esModuleInterop": true,
-    "types": ["node", "jest"],
+    "types": ["node", "jest", "express"],
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "resolveJsonModule": true,
