ci: sonarqube action

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,7 @@ sonar.organization=eltonarodrigues
 sonar.projectName=fiap-tech-challenge-soat-producao
 # defaults to 'not provided'
 sonar.projectVersion=1.0
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 # Path is relative to the sonar-project.properties file. Defaults to .
 #sonar.sources=.
 # Encoding of the source code. Default is default system encoding
