--- a/.github/workflows/test_pr.yaml
+++ b/.github/workflows/test_pr.yaml
@@ -22,8 +22,8 @@ jobs:
     - name: Install dependencies
       run: yarn install --frozen-lockfile
 
-    - name: Run Tests
-      run: yarn test
+    - name: Run Tests and coverage
+      run: yarn test --coverage
 
     - name: Run Lint
       run: npx eslint . --ext .js,.jsx,.ts,.tsx
