--- a/.github/workflows/test_pr.yaml
+++ b/.github/workflows/test_pr.yaml
@@ -10,11 +10,26 @@ jobs:
     runs-on: ubuntu-latest
     name: Run test and lint
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
       with:
         node-version: 20
         cache: 'yarn'
-    - run: yarn install --frozen-lockfile
-    - run: yarn test
-    - run: npx eslint . --ext .js,.jsx,.ts,.tsx
+
+    - name: Install dependencies
+      run: yarn install --frozen-lockfile
+
+    - name: Run Tests
+      run: yarn test
+
+    - name: Run Lint
+      run: npx eslint . --ext .js,.jsx,.ts,.tsx
+
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: 'https://sonarcloud.io'  # ajuste conforme necessário
