--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -8,17 +8,28 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: Run test and lint
+    name: Tests
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
       with:
         node-version: 20
         cache: 'yarn'
-    - run: yarn install --frozen-lockfile
-    - run: yarn test
-    - run: npx eslint . --ext .js,.jsx,.ts,.tsx
 
+    - name: Run test and lint
+      run: |
+        yarn install --frozen-lockfile
+        yarn test --coverage
+        npx eslint . --ext .js,.jsx,.ts,.tsx
+
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: 'https://sonarcloud.io'
   build_and_publish_image:
     needs: [ test ]
     name: Push Docker image to Docker Hub
