--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.projectName=fiap-tech-challenge-soat-producao
 sonar.projectVersion=1.0
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.test.inclusions=**/*.spec.ts
+sonar.sources=src/
 # Path is relative to the sonar-project.properties file. Defaults to .
 #sonar.sources=.
 # Encoding of the source code. Default is default system encoding
