--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.3",
     "@types/qrcode": "^1.5.1",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
@@ -46,7 +47,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "nodemon": "^2.0.22",
-    "supertest": "^6.3.3",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.7",
