test: ignore some tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,7 +16,8 @@ sonar.coverage.exclusions= \
     src/datasources/databaseNoSql/config/init.ts, \
     src/presenters/queueHandler/pagamentoHandler.ts, \
     src/presenters/api/routers/schemas/pedidoRouter.schema.ts, \
-    src/index.ts, \
+    src/presenters/api/routers/utils.ts, \
+    src/presenters/api/swaggerConfig.ts, \
 # Path is relative to the sonar-project.properties file. Defaults to .
 #sonar.sources=.
 # Encoding of the source code. Default is default system encoding
