--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -23,7 +23,7 @@ jobs:
       run: |
         yarn install --frozen-lockfile
         yarn test --coverage
-        npx eslint . --ext .js,.jsx,.ts,.tsx
+        npx eslint src --ext .js,.jsx,.ts,.tsx
 
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
