--- a/.github/workflows/test_pr.yaml
+++ b/.github/workflows/test_pr.yaml
@@ -26,7 +26,7 @@ jobs:
       run: yarn test --coverage
 
     - name: Run Lint
-      run: npx eslint . --ext .js,.jsx,.ts,.tsx
+      run: npx eslint src --ext .js,.jsx,.ts,.tsx
 
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
