--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "npx tsc && npx tsc-alias -p tsconfig.json",
     "start": "node dist/index.js",
     "dev": "nodemon --watch src src/index.ts",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint src --ext .ts",
     "test": "npx tsc && jest --coverage --silent=false --detectOpenHandles",
     "test:bdd": "cucumber-js"
   },
