--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -78,9 +78,8 @@ jobs:
         env: 
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
           AWS_ECS_ROLE: ${{ secrets.AWS_ECS_ROLE }}
-          TARGET_GROUP_ARN: ${{ secrets.TARGET_GROUP_ARN }}
         run: |
-          sed -e "s/\${AWS_ACCOUNT_ID}/${AWS_ACCOUNT_ID}/g" -e "s/\${AWS_ECS_ROLE}/${AWS_ECS_ROLE}/g" -e "s/\${TARGET_GROUP_ARN}/${TARGET_GROUP_ARN}/g" ecs/task-definition-template.json > ecs/task-definition.json
+          sed -e "s/\${AWS_ACCOUNT_ID}/${AWS_ACCOUNT_ID}/g" -e "s/\${AWS_ECS_ROLE}/${AWS_ECS_ROLE}/g" ecs/task-definition-template.json > ecs/task-definition.json
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
@@ -117,7 +116,9 @@ jobs:
           SUB_NET_2: ${{ secrets.SUB_NET_2 }}
           SUB_NET_3: ${{ secrets.SUB_NET_3 }}
           SECURITY_GROUPS: ${{ secrets.SECURITY_GROUPS }}
+          TARGET_GROUP_ARN: ${{ secrets.TARGET_GROUP_ARN }}
+
         run: |
-          sed -e "s/\${CLUSTER_NAME}/${CLUSTER_NAME}/g" -e "s/\${SERVICE_NAME}/${SERVICE_NAME}/g" -e "s/\${TASK_DEFINITION}/${TASK_DEFINITION}/g" -e "s/\${SUB_NET_1}/${SUB_NET_1}/g" -e "s/\${SUB_NET_2}/${SUB_NET_2}/g" -e "s/\${SUB_NET_3}/${SUB_NET_3}/g" -e "s/\${SECURITY_GROUPS}/${SECURITY_GROUPS}/g" ecs/service-definition_template.json > ecs/service-definition.json
+          sed -e "s/\${CLUSTER_NAME}/${CLUSTER_NAME}/g" -e "s/\${SERVICE_NAME}/${SERVICE_NAME}/g" -e "s/\${TASK_DEFINITION}/${TASK_DEFINITION}/g" -e "s/\${SUB_NET_1}/${SUB_NET_1}/g" -e "s/\${SUB_NET_2}/${SUB_NET_2}/g" -e "s/\${SUB_NET_3}/${SUB_NET_3}/g" -e "s/\${SECURITY_GROUPS}/${SECURITY_GROUPS}/g" -e "s/\${TARGET_GROUP_ARN}/${TARGET_GROUP_ARN}/g" ecs/service-definition_template.json > ecs/service-definition.json
           cat ecs/service-definition.json
           aws ecs update-service --cluster ${{ secrets.CLUSTER_NAME }} --service ${{ secrets.SERVICE_NAME }} --force-new-deployment --region ${{ secrets.AWS_REGION }} || aws ecs create-service --cli-input-json file://ecs/service-definition.json
