--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -6,32 +6,32 @@ on:
       - main
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   name: Tests
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v4
+  test:
+    runs-on: ubuntu-latest
+    name: Tests
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-  #   - name: Set up Node.js
-  #     uses: actions/setup-node@v3
-  #     with:
-  #       node-version: 20
-  #       cache: 'yarn'
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20
+        cache: 'yarn'
 
-  #   - name: Run test and lint
-  #     run: |
-  #       yarn install --frozen-lockfile
-  #       yarn test --coverage
-  #       npx eslint src --ext .js,.jsx,.ts,.tsx
+    - name: Run test and lint
+      run: |
+        yarn install --frozen-lockfile
+        yarn test --coverage
+        npx eslint src --ext .js,.jsx,.ts,.tsx
 
-  #   - name: SonarQube Scan
-  #     uses: sonarsource/sonarqube-scan-action@master
-  #     env:
-  #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #       SONAR_HOST_URL: 'https://sonarcloud.io'
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: 'https://sonarcloud.io'
   build_and_publish_image:
-    # needs: [ test ]
+    needs: [ test ]
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
