--- a/.github/workflows/test_pr.yaml
+++ b/.github/workflows/test_pr.yaml
@@ -13,23 +13,31 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # - name: Set up Node.js
-    #   uses: actions/setup-node@v3
-    #   with:
-    #     node-version: 20
-    #     cache: 'yarn'
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20
+        cache: 'yarn'
 
-    # - name: Install dependencies
-    #   run: yarn install --frozen-lockfile
+    - name: Install dependencies
+      run: yarn install --frozen-lockfile
 
-    # - name: Run Tests and coverage
-    #   run: yarn test --coverage
+    - name: Run Tests and coverage
+      run: yarn test --coverage
 
-    # - name: Run Lint
-    #   run: npx eslint src --ext .js,.jsx,.ts,.tsx
+    - name: Run Lint
+      run: npx eslint src --ext .js,.jsx,.ts,.tsx
 
-    # - name: SonarQube Scan
-    #   uses: sonarsource/sonarqube-scan-action@master
-    #   env:
-    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    #     SONAR_HOST_URL: 'https://sonarcloud.io'
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: 'https://sonarcloud.io'
+    
+    - name: SonarQube Quality Gate check
+      id: sonarqube-quality-gate-check
+      uses: sonarsource/sonarqube-quality-gate-action@master
+      timeout-minutes: 5
+      env:
+       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+       SONAR_HOST_URL: 'https://sonarcloud.io'
