ci: update ci job name

--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -59,7 +59,7 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_IMAGE_NAME }}:latest
 
-  deploy-eks:
+  deploy-ecs:
     needs: [ build_and_publish_image ]
     runs-on: ubuntu-latest
 
