--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -44,12 +44,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: eltonarodrigues/test-fiap-ci
-      
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -87,7 +81,7 @@ jobs:
         with:
           task-definition: ecs/task-definition.json
           container-name: fiat-tech-producao
-          image: eltonarodrigues/fiap-tech-challenge-soat-grupo-30:latest # TODO
+          image: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_IMAGE_NAME }}:latest
           environment-variables: |
               NODE_ENV=${{ secrets.NODE_ENV }}
               DB_HOST=${{ secrets.DB_HOST }}
