fix: update lint

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: "3.4"
 
 services:
   app:
@@ -29,7 +29,7 @@ services:
       - fiap-project-network
 
 volumes:
-   db:
+  db:
 
 networks:
   fiap-project-network:
