fix(api): add delete endpoint

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@ DB_HOST=localhost
 DB_NAME=PedidoDB
 DB_PORT=37017
 
-PRODUTO_MS_URL=""
-FILA_ENVIO_PAGAMENTO="pagamento-queue"
-FILA_PAGAMENTO_URL="pedido-pago"
-FILA_PAGAMENTO_DLQ_URL="pedido-pago-dlq"
+PRODUTO_MS_URL=
+FILA_ENVIO_PAGAMENTO=pagamento-queue
+FILA_PAGAMENTO_URL=pedido-pago
+FILA_PAGAMENTO_DLQ_URL=pedido-pago-dlq
+NOTIFICATION_QUEUE=notification_queue
