--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ FILA_ENVIO_PAGAMENTO=pagamento-queue
 FILA_PAGAMENTO_URL=pedido-pago
 FILA_PAGAMENTO_DLQ_URL=pedido-pago-dlq
 FILA_NOTIFICACAO=notification_queue
+FILA_CANCELAMENTO_PAGAMENTO=cancelamento_queue
