--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -5,7 +5,9 @@ on:
   push:
     branches:
       - main
-
+  pull_request: # TODO
+    branches:
+      - main
 jobs:
   test:
     runs-on: ubuntu-latest
