fix: use token to get clientId

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,6 +15,7 @@ sonar.coverage.exclusions= \
     src/presenters/api/index.ts, \
     src/datasources/databaseNoSql/config/init.ts, \
     src/presenters/queueHandler/pagamentoHandler.ts, \
+    src/presenters/api/middleware/getClientId.ts, \
     src/presenters/api/routers/schemas/pedidoRouter.schema.ts, \
     src/presenters/api/routers/utils.ts, \
     src/presenters/api/swaggerConfig.ts, \
